<resources>
    <string name="app_name">Lovely Animals</string>

    <string name="menu_home">Pet Home</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_fb">Facebook</string>
    <string name="menu_ins">Instagram</string>
    <string name="menu_info">Info</string>
    <string name="communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="share_by">Share:</string>
    <string name="share_body">I want to share "Lovely Animals" application.\n</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    // INVALID VALUE
    <string name="no_internet">No internet connection</string>

    <string name="new_post_title">Short title</string>
    <string name="new_post_description">Description</string>
    <string name="add_new_post">Add new post</string>
    <string name="add_post">Add post</string>
    <string name="cancel">Cancel</string>
    <string name="something_wrong">Not write. Check your enter data</string>
    <string name="task_cancelled">Task canceled</string>

    <string name="select_photo">Select photo</string>
    <string name="back_photo">back</string>
    <string name="next_photo">next</string>

    <string name="info_toolbar_title">Interesting fact</string>
</resources>