<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/shop"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_fb"
            android:icon="@drawable/fb"
            android:title="@string/menu_fb" />
        <item
            android:id="@+id/nav_ins"
            android:icon="@drawable/shop"
            android:title="@string/menu_ins" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>