<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="8dp">

    <ImageSwitcher
        android:id="@+id/img_pet"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_pets" />

    <Button
        android:id="@+id/btn_select_photo"
        style="@style/ButtonTransparent"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/img_pet"
        android:background="@color/text_disabled_dark"
        android:drawableStart="@drawable/ic_take_photo"
        android:text="@string/select_photo" />

    <!--click here to view previous image-->
    <ImageView
        android:src="@drawable/ic_back"
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/img_pet"
        android:layout_below="@+id/btn_select_photo" />

    <!--click here to view next image-->
    <ImageView
        android:src="@drawable/ic_next"
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btn_select_photo"
        android:layout_toEndOf="@+id/btn_back"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/create_post_title"
        style="@style/Text_Title_Dark"
        android:layout_below="@+id/img_pet"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/new_post_title"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/create_post_description"
        style="@style/Text_Description"
        android:layout_below="@+id/create_post_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/new_post_description"
        android:inputType="textMultiLine" />

    <View
        style="@style/AppTheme.HorizontalViewDivider"
        android:layout_below="@+id/create_post_description" />
</RelativeLayout>